RESOLVED FIXED260663
[ macOS EWS Release ] media/video-remove-insert-repaints.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=260663
Summary [ macOS EWS Release ] media/video-remove-insert-repaints.html is a flaky crash
Attachments
Crash log (31.71 KB, text/plain)
2023-08-24 09:39 PDT, Andy Estes
no flags
Radar WebKit Bug Importer
Comment 1 2023-08-24 09:44:13 PDT
Andy Estes
Comment 2 2023-08-24 09:48:57 PDT
EWS
Comment 3 2023-08-24 18:19:52 PDT
Committed 267257@main (8f95bb755716): <https://commits.webkit.org/267257@main> Reviewed commits have been landed. Closing PR #17021 and removing active labels.
Kimmo Kinnunen
Comment 4 2023-09-14 07:57:08 PDT
Seeing this again: https://ews-build.webkit.org/#/builders/17/builds/14751 https://ews-build.s3-us-west-2.amazonaws.com/macOS-AppleSilicon-Ventura-Debug-WK2-Tests-EWS/53b3b82c-14751/results.html https://ews-build.s3-us-west-2.amazonaws.com/macOS-AppleSilicon-Ventura-Debug-WK2-Tests-EWS/53b3b82c-14751/media/video-remove-insert-repaints-crash-log.txt ASSERTION FAILED: m_clientCounts.contains(contextId) /Volumes/Data/worker/macOS-AppleSilicon-Ventura-Debug-Build-EWS/build/Source/WebKit/WebProcess/cocoa/VideoFullscreenManager.mm(236) : void WebKit::VideoFullscreenManager::removeClientForContext(WebKit::PlaybackSessionContextIdentifier) 1 0x137a60df8 WTFCrash 2 0x11887f6c0 std::__1::span<unsigned char const, 18446744073709551615ul>::span[abi:v15006]<unsigned char const*>(unsigned char const*, unsigned long) 3 0x11a3aeb1c WebKit::VideoFullscreenManager::removeClientForContext(WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>) 4 0x11a3b34e0 WebKit::VideoFullscreenManager::didCleanupFullscreen(WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>) 5 0x11af5e134 auto void IPC::callMemberFunction<WebKit::VideoFullscreenManager, WebKit::VideoFullscreenManager, void (WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>(WebKit::VideoFullscreenManager*, void (WebKit::VideoFullscreenManager::*)(WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>&&)::'lambda'(auto&&...)::operator()<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>(auto&&...) const 6 0x11af5e09c decltype(std::declval<WebKit::VideoFullscreenManager>()(std::declval<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>())) std::__1::__invoke[abi:v15006]<void IPC::callMemberFunction<WebKit::VideoFullscreenManager, WebKit::VideoFullscreenManager, void (WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>(WebKit::VideoFullscreenManager*, void (WebKit::VideoFullscreenManager::*)(WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>&&)::'lambda'(auto&&...), WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>(WebKit::VideoFullscreenManager&&, WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>&&) 7 0x11af5e070 decltype(auto) std::__1::__apply_tuple_impl[abi:v15006]<void IPC::callMemberFunction<WebKit::VideoFullscreenManager, WebKit::VideoFullscreenManager, void (WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>(WebKit::VideoFullscreenManager*, void (WebKit::VideoFullscreenManager::*)(WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>&&)::'lambda'(auto&&...), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>, 0ul>(WebKit::VideoFullscreenManager&&, WebKit::VideoFullscreenManager&&, std::__1::__tuple_indices<0ul>) 8 0x11af5e034 decltype(auto) std::__1::apply[abi:v15006]<void IPC::callMemberFunction<WebKit::VideoFullscreenManager, WebKit::VideoFullscreenManager, void (WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>(WebKit::VideoFullscreenManager*, void (WebKit::VideoFullscreenManager::*)(WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>&&)::'lambda'(auto&&...), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>(WebKit::VideoFullscreenManager&&, WebKit::VideoFullscreenManager&&) 9 0x11af5dd8c void IPC::callMemberFunction<WebKit::VideoFullscreenManager, WebKit::VideoFullscreenManager, void (WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>>(WebKit::VideoFullscreenManager*, void (WebKit::VideoFullscreenManager::*)(WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>), std::__1::tuple<WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>>&&) 10 0x11af5b9dc void IPC::handleMessage<Messages::VideoFullscreenManager::DidCleanupFullscreen, WebKit::VideoFullscreenManager, WebKit::VideoFullscreenManager, void (WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>)>(IPC::Connection&, IPC::Decoder&, WebKit::VideoFullscreenManager*, void (WebKit::VideoFullscreenManager::*)(WTF::ObjectIdentifierGeneric<WebCore::HTMLMediaElementIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>)) 11 0x11af5ae14 WebKit::VideoFullscreenManager::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 12 0x11b7467ac IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 13 0x11a887ed0 WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 14 0x11b71c7d4 IPC::Connection::dispatchMessage(IPC::Decoder&) 15 0x11b71cc04 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder>>) 16 0x11b71cf14 IPC::Connection::dispatchOneIncomingMessage() 17 0x11b739d20 IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder>>)::$_17::operator()() const 18 0x11b739c7c WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder>>)::$_17, void>::call() 19 0x1397df314 WTF::Function<void ()>::operator()() const 20 0x137b1eb8c WTF::RunLoop::performWork() 21 0x137b231ec WTF::RunLoop::performWork(void*) 22 0x18cfbe63c __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 23 0x18cfbe5d0 __CFRunLoopDoSource0 24 0x18cfbe340 __CFRunLoopDoSources0 25 0x18cfbcf48 __CFRunLoopRun 26 0x18cfbc4b8 CFRunLoopRunSpecific 27 0x18df35fcc -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 28 0x18dfaeccc -[NSRunLoop(NSRunLoop) run] 29 0x18cc2e594 _xpc_objc_main 30 0x18cc2deb4 xpc_main 31 0x1196873a4 WebKit::XPCServiceMain(int, char const**) com.apple.WebKit.WebContent.Development terminated (pid 21143) for reason: crash LEAK: 1 WebPageProxy
Andy Estes
Comment 5 2023-09-14 08:18:50 PDT
This was about addressing a crash in Release configurations. Filed https://bugs.webkit.org/show_bug.cgi?id=261557 to track the Debug assertion failures.
Note You need to log in before you can comment on or make changes to this bug.