[ macOS EWS ] media/video-remove-insert-repaints.html is a flaky crash https://bugs.webkit.org/show_bug.cgi?id=260663 rdar://114387091

Reviewed by Jer Noble.

If VideoFullscreenManager::removeContext is called with a contextId that doesn't exist in
m_contextMap then a new model would be created with a null video element, leading to a crash when
attempting to remove the video element from m_videoElements. Addressed this by returning early in
VideoFullscreenManager::removeContext if no model/interface pair exists for the given contextId.
Assert that this does not occur to help us track down the underlying issue in Debug builds
(removeContext should not be called for a non-existent contextId).

* Source/WebKit/WebProcess/cocoa/PlaybackSessionManager.mm:
(WebKit::PlaybackSessionManager::removeContext):
* Source/WebKit/WebProcess/cocoa/VideoFullscreenManager.mm:
(WebKit::VideoFullscreenManager::removeContext):

Canonical link: https://commits.webkit.org/267257@main